@@ -72,6 +72,7 @@ Release 0.8.6
   if no address found (even though this should never happen)
 - file change list is now sorted and file names link to subversion
 - move default crumbtrail handling back into default controller
+- wrap all messages in zm_l10n_get(..) calls (thanks Markku)
 
 Release 0.8.5
 - add 'php_flag register_globals off' to main .htaccess file
